--- a/template/package.json
+++ b/template/package.json
@@ -30,57 +30,52 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "@reduxjs/toolkit": "^1.4.0",
-    "@sentry/react-native": "^1.7.1",
-    "apisauce": "^1.1.2",
-    "react": "^16.13.1",
-    "react-native": "^0.63.2",
-    "react-native-bootsplash": "^2.2.5",
-    "react-native-config": "^1.3.3",
-    "react-native-fast-image": "^8.3.2",
-    "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.12.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@sentry/react-native": "^2.4.2",
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-native": "^0.64.1",
+    "react-native-bootsplash": "^3.2.3",
+    "react-native-config": "^1.4.2",
+    "react-native-fast-image": "^8.3.4",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.1.0",
     "react-native-redash": "^14.2.3",
-    "react-native-safe-area-context": "^3.1.4",
-    "react-native-screens": "^2.10.1",
-    "react-native-svg": "^12.1.0",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
-    "redux-observable": "^1.2.0",
-    "rxjs": "^6.6.2",
-    "swr": "^0.3.0"
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.2.0",
+    "react-native-svg": "^12.1.1",
+    "react-redux": "^7.2.4",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/runtime": "^7.11.2",
-    "@testing-library/jest-native": "^3.3.0",
-    "@testing-library/react-native": "^7.0.1",
-    "@types/jest": "^25.2.3",
-    "@types/react-native": "^0.63.2",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-test-renderer": "^16.9.3",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "babel-jest": "^25.5.1",
-    "detox": "^17.3.6",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-react-native": "^3.8.1",
-    "jest": "^25.5.4",
-    "jest-circus": "^26.4.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "miragejs": "^0.1.40",
-    "prettier": "^2.0.5",
-    "react-native-flipper": "^0.52.1",
-    "react-test-renderer": "^16.13.1",
-    "reactotron-react-native": "^5.0.0",
-    "reactotron-redux": "^3.1.3",
-    "typescript": "^3.9.7",
+    "@babel/core": "^7.14.2",
+    "@babel/runtime": "^7.14.0",
+    "@testing-library/jest-native": "^4.0.1",
+    "@testing-library/react-native": "^7.2.0",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.64.5",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "babel-jest": "^26.6.3",
+    "detox": "^18.13.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.10.0",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.0",
+    "miragejs": "^0.1.41",
+    "prettier": "^2.3.0",
+    "react-native-flipper": "^0.90.0",
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.2.4",
     "xmlhttprequest": "^1.8.0"
   },
   "jest": {
