--- a/template/.gitignore
+++ b/template/.gitignore
@@ -20,6 +20,7 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+ios/sentry.properties
 
 # Android/IntelliJ
 #
@@ -28,6 +29,7 @@ build/
 .gradle
 local.properties
 *.iml
+android/sentry.properties
 
 # Visual Studio Code
 #
